ListStepsResponse Step ctor